Saperating about me and home pages

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,8 @@
             <a href="/">Lior Milliger - DevOps</a>
         </div>
         <div class="nav-menu-links">
-            <a href="/">About Me</a>
+            <a href="/">Home</a>
+            <a href="/about-me">About Me</a>
             <a href="/tech-in-action">Tech in Action</a>
             <a href="/my-projects">My Projects</a>
             <a href="/education">Education</a>
