--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Lior Milliger - About Me{% endblock %}
+{% block title %}Lior Milliger - Home{% endblock %}
 
 {% block content %}
 <div class="homepage-content">
