--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="homepage-content">
     
-    <h1 class="welcome-heading">Welcome to my Portfolio Website</h1>
+    <h1 class="welcome-heading">Lior Milliger // DevOps Engineer</h1>
     
     <img src="{{ url_for('static', filename='files/LiorPhoto.jpg') }}" alt="A photo of Lior Milliger" class="profile-photo">
         
