typo in base.html contact

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
             <a href="/tech-in-action">Tech in Action</a>
             <a href="/my-projects">My Projects</a>
             <a href="/education">Education</a>
-            <a href="/Contact">Contact</a>
+            <a href="/contact">Contact</a>
 
         </div>
         <div class="nav-icon-links">
