fixed syntax error in contact.html - closing section EOF

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -26,3 +26,5 @@
                 <a href="https://github.com/liormilliger/mywebsite-app" target="_blank">GitHub Repository</a>
             </div>
         </div>
+    </div>
+</section> {% endblock %} ```
